feat: 득표순으로 팀 정렬해서 조회하기